@@ -35,6 +35,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #20246: Fix buffer overflow in socket.recvfrom_into.
+
 - Issue #19082: Working SimpleXMLRPCServer and xmlrpclib examples, both in
   modules and documentation.
 
